--- a/server/pom.xml
+++ b/server/pom.xml
@@ -3,24 +3,24 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.tochka.osdo.utils</groupId>
-    <artifactId>utils.service</artifactId>
+    <groupId>com.magic-wand</groupId>
+    <artifactId>server.side</artifactId>
     <version>1.0.0</version>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.4.RELEASE</version>
+        <version>2.0.0.RELEASE</version>
     </parent>
 
 
     <properties>
         <java.version>1.8</java.version>
-        <jackson.databind.version>2.8.8</jackson.databind.version>
+        <jackson.databind.version>2.9.4</jackson.databind.version>
         <xmlrpc.version>3.1.3</xmlrpc.version>
         <rest-assured.version>2.9.0</rest-assured.version>
         <joda.time.version>2.9.3</joda.time.version>
-        <lambok.version>1.16.16</lambok.version>
+        <lombok.version>1.16.20</lombok.version>
         <form.version>FULL</form.version>
     </properties>
 
@@ -28,16 +28,11 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>${lambok.version}</version>
+            <version>${lombok.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.jayway.jsonpath</groupId>
